package pl.kansas.go.domain.model;

public enum MoveType {
    PLAY,
    PASS,
    SURRENDER
}
